made further changes